--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,18 @@
   margin: 0;
 }
 .app-wrapper {
+  margin: 0 10%;
   display: grid;
+  grid-gap: 5px;
   grid-template-columns: 1fr 4fr;
   grid-template-rows: 1fr 10fr;
   grid-template-areas: 
   "h h"
   "n c ";
 
+}
+img {
+  border-radius: 8px;
 }
 header img {
   height: 100%;
@@ -27,9 +32,22 @@ navbar {
   grid-area: n;
 
 }
+.navigation div:nth-last-child(-n+2){
+  margin-bottom: 40px;
+}
 content {
   background: darkblue;
   border-radius: 8px;
   grid-area: c;
 
+}
+.WrapperInfo {
+  display:flex;
+}
+content>img {
+  height: 150px;
+  width: 100%;
+}
+.Ava {
+height: 50px;
 }
